force-app/main/default/objects/Scheme__c/fields/Cart_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cart_Amount__c</fullName>
    <label>Cart Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>