force-app/main/default/objects/Scheme__c/fields/Discount_Mode__c.field-meta.xml
<CustomField>
    <fullName>Discount_Mode__c</fullName>
    <label>Discount Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Cash Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>