force-app/main/default/objects/Scheme__c/fields/For_Type__c.field-meta.xml
<CustomField>
    <fullName>For_Type__c</fullName>
    <label>For Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Product Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>