force-app/main/default/objects/Scheme__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Scheme_Start_Date__c)),
        NOT(ISBLANK(Scheme_End_Date__c)),
        TODAY() &gt;= Scheme_Start_Date__c,
        TODAY() &lt;= Scheme_End_Date__c
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>