force-app/main/default/objects/Scheme__c/fields/Max_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Amount__c</fullName>
    <label>Max Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>