force-app/main/default/objects/Scheme__c/fields/Minimum_Purchase_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Purchase_Quantity__c</fullName>
    <label>Minimum Purchase Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>