force-app/main/default/objects/Scheme__c/fields/Other_Product__c.field-meta.xml
<CustomField>
    <fullName>Other_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Scheme</relationshipName>
    <type>Lookup</type>
</CustomField>