force-app/main/default/objects/Scheme__c/fields/Other_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Other_Product_Quantity__c</fullName>
    <label>Other Product Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>