force-app/main/default/objects/Scheme__c/fields/Promotion_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Quantity__c</fullName>
    <label>Promotion Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>