force-app/main/default/objects/Scheme__c/fields/Retailer_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Scheme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retailer Scheme</label>
    <type>Checkbox</type>
</CustomField>