force-app/main/default/objects/Scheme__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same Product – Free</fullName>
            </value>
            <value>
                <fullName>Other Product – Free</fullName>
            </value>
            <value>
                <fullName>Other Product – Discounted</fullName>
            </value>
            <value>
                <fullName>Same Product – Discounted</fullName>
            </value>
            <value>
                <fullName>Flat Discount</fullName>
            </value>
            <value>
                <fullName>Free Product</fullName>
            </value>
            <value>
                <fullName>Purchase Quantity Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>