force-app/main/default/objects/Scheme__c/fields/Under_SS_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Under_SS_Scheme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under SS Scheme</label>
    <type>Checkbox</type>
</CustomField>