force-app/main/default/objects/Scheme__c/recordTypes/Quantity_scheme.recordType-meta.xml
<RecordType>
    <fullName>Quantity_scheme</fullName>
    <active>true</active>
    <label>Quantity scheme</label>
</RecordType>