force-app/main/default/objects/Scheme__c/recordTypes/Value_scheme.recordType-meta.xml
<RecordType>
    <fullName>Value_scheme</fullName>
    <active>true</active>
    <label>Value scheme</label>
</RecordType>