force-app/main/default/objects/Scheme__c/validationRules/Discount_Mode_required_for_Flat_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Mode_required_for_Flat_Discount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Type__c, &apos;Flat Discount&apos;),
  ISPICKVAL(Discount_Mode__c, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Discount_Mode__c</errorDisplayField>
    <errorMessage>Discount Mode is required for Flat Discount schemes.</errorMessage>
</ValidationRule>