force-app/main/default/objects/Scheme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Minimum_Purchase_Quantity__c</columns>
    <columns>Scheme_Start_Date__c</columns>
    <columns>Scheme_End_Date__c</columns>
    <columns>Scheme_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>